src/objects/PEC_Ranking_Snapshot__c.object
<CustomObject>
    <description>Stores a record of pec performance and ranking on a given date. This will be used to determine national and regional rankings.</description>
    <fields>
        <fullName>Avg_Financial_Needs_Score__c</fullName>
        <label>Avg Financial Needs Score</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Rainmaker_Score__c</fullName>
        <label>Avg Rainmaker Score</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callback_National_Rank__c</fullName>
        <label>Callback National Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callback_Regional_Rank__c</fullName>
        <label>Callback Regional Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callbacks_Num__c</fullName>
        <label>Callbacks Num</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancels_In__c</fullName>
        <label>Cancels In</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancels_out__c</fullName>
        <label>Cancels out</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consults__c</fullName>
        <label>Consults</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Needs_National_Rank__c</fullName>
        <label>Financial Needs National Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Needs_Regional_Rank__c</fullName>
        <label>Financial Needs Regional Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Activity_National_Rank__c</fullName>
        <label>Learning Activity National Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Activity_Num__c</fullName>
        <label>Learning Activity Num</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Activity_Regional_Rank__c</fullName>
        <label>Learning Activity Regional Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Overall_Rank__c</fullName>
        <label>National Overall Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rainmaker_National_Rank__c</fullName>
        <label>Rainmaker National Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rainmaker_Regional_Rank__c</fullName>
        <label>Rainmaker Regional Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Starts__c</fullName>
        <label>Starts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_National_Rank__c</fullName>
        <formula>Callback_National_Rank__c + Learning_Activity_National_Rank__c + (Rainmaker_National_Rank__c * 3) + (True_Close_Rate_National_Rank__c * 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total National Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>True_Close_Rate_National_Rank__c</fullName>
        <label>True Close Rate National Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>True_Close_Rate_Regional_Rank__c</fullName>
        <label>True Close Rate Regional Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>True_Close_Rate__c</fullName>
        <label>True Close Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PEC_Ranking_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PEC Ranking Snapshot</label>
    <nameField>
        <displayFormat>PRSN-{00000}</displayFormat>
        <label>PEC Ranking Snaphot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PEC Ranking Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>